# PidController

./: CMakeLists.txt  README.md  build.sh  summary.txt
PidControllerLinux/: README.md
PidControllerLinux/exodriver/examples/U3/: Makefile  u3BasicConfigU3.c  u3Feedback.c  u3Stream.c  u3allio.c
PidControllerLinux/include/: Max31889.h  u3.h
PidControllerLinux/src/: CMakeLists.txt
PidControllerLinux/src/pidProjectLib/: CMakeLists.txt  CP2112.cpp  Max31889.cpp
PidControllerWindows/: PidControllerWindows.sln
PidControllerWindows/PidControllerWindows/: PidControllerWindows.cpp  PidControllerWindows.vcxproj  PidControllerWindows.vcxproj.filters
PidControllerWindows/PidControllerWindows/PidContr.f36a18f2/x64/Debug/: vc143.idb
PidControllerWindows/PidControllerWindows/PidContr.f36a18f2/x64/Debug/PidContr.f36a18f2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PidControllerWindows.lastbuildstate
PidControllerWindows/PidControllerWindows/include/: CP2112.h  SLABCP2112.h  pidProject.h  silabs_defs.h  silabs_sal.h
PidControllerWindows/PidControllerWindows/libs/: LabJackM.lib  LabJackUD.lib
PidControllerWindows/PidControllerWindows/src/: CP2112.cpp  ConsoleApplication1.cpp  MAX31889viaCP2112.cpp  Max31889.cpp  MockMax31889.cpp  pidProjectLib.cpp
exodriver/examples/U3/: u3EFunctions.c  u3LJTDAC.c
exodriver/liblabjackusb/: labjackusb.c  liblabjackusb.so.2.7.0
include/: CP2112.h  pidProject.h  u3.h
src/: CMakeLists.txt  pidProject.cpp
src/pidProjectLib/: CMakeLists.txt  CP2112.cpp  Max31889.cpp  pidProjectLib.cpp
test/: CMakeLists.txt  test.cpp
